--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>Mattmdb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+  <!--<link rel='stylesheet' href='https://unpkg.com/@picocss/pico@1.*/css/pico.min.css'>-->
+  <link rel="icon" href="/assets/favicon-32x32.png">
+  <title>MatTMDB</title>
 </head>
 <body>
   <app-root></app-root>
